refactor source code

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 FLASK_ENV=development
 FLASK_DEBUG=1
-FLASK_APP=app
+FLASK_APP=app/app.py
 FLASK_RUN_PORT=50000
 FLASK_RUN_HOST=localhost
 
 SECRET_KEY=your_secret_key
-DATABASE_URI="postgresql://postgres:1@localhost:5432/apiDashboard"
+SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/apiDashboard"
