--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
+attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+exceptiongroup==1.1.1
 Flask==2.2.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.0.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+packaging==23.0
+pluggy==1.0.0
 psycopg2==2.9.5
+pytest==7.2.2
 python-dotenv==1.0.0
+PyYAML==6.0
 requests==2.28.2
+responses==0.23.1
 SQLAlchemy==2.0.6
+tomli==2.0.1
+types-PyYAML==6.0.12.8
 typing_extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.2.3
