--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,23 +13,34 @@ jobs:
        # Service container image
       - image: cimg/postgres:14.0
         environment:
-          POSTGRES_USER: postgres
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
+          POSTGRES_PASSWORD: ""
     steps:
       - checkout
-      - run: sudo apt-get update
-      - run: sudo apt-get install postgresql-client
-      - run: |
-          psql \
-          -d $TEST_DATABASE_URL \
-          -c "CREATE DATABASE apiDashboard;"
-      - run: whoami
-      - python/install-packages:
-          pkg-manager: pip
-          # app-dir: ~/project/package-directory/  # If you're requirements.txt isn't in the root directory.
-          # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
+      - run:
+          name: Install Python dependencies in a venv
+          command: |
+            virtualenv venv
+            venv/bin/activate
+            python -m pip install -r requirements.txt
+      - run:
+          # https://discuss.circleci.com/t/how-do-you-use-postgres-9-6-x-or-9-x-x/9855/3
+          name: Database Setup
+          command: |
+            sudo apt-get install postgres-9.6
+            sudo service postgresql stop
+            sudo mv /usr/lib/postgresql-9.6/9.6 /usr/lib/postgresql/9.6
+            sudo mv /etc/postgresql-9.6/9.6 /etc/postgresql/9.6
+            sudo service postgresql start 9.6
+
+            sudo -u postgres psql -p 5433 -c "create user ubuntu with password 'ubuntu';"
+            sudo -u postgres psql -p 5433 -c "alter user ubuntu with superuser;"
+
+            sudo -u postgres psql -p 5433 -c "create database apiDashboard;"
+
+            sudo -u postgres psql -p 5433 -c "select * from apiDashboard;"
+            
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
