--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,11 @@ jobs:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD
        # Service container image
-      - image: cimg/postgres:14.0
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
-          POSTGRES_PASSWORD: ""
+      # - image: cimg/postgres:14.0
+      #   environment:
+      #     POSTGRES_USER: root
+      #     POSTGRES_DB: circle_test
+      #     POSTGRES_PASSWORD: ""
     steps:
       - checkout
       - run:
@@ -33,7 +33,7 @@ jobs:
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
-          command: pytest
+          command: python pytest
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
