--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,6 @@ jobs:
   build-and-test:
     docker:
       - image: cimg/python:3.10.2
-        environment:
-          TEST_DATABASE_URL: postgresql://postgres@localhost/apiDashboard
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD
        # Service container image
       # - image: cimg/postgres:14.0
       #   environment:
@@ -20,13 +15,20 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
+
       - run:
-          # https://discuss.circleci.com/t/how-do-you-use-postgres-9-6-x-or-9-x-x/9855/3
           name: Database Setup
           command: |
-           sudo apt update && sudo apt install postgresql-client
-           sudo apt install python-pytest
-            
+            sudo apt update && sudo apt install postgresql-client
+            sudo service postgresql stop && sudo apt-get remove -y postgresql-9.4 && sudo apt-get update; sudo apt-get install -y postgresql-9.3 postgresql-contrib-9.3
+            sudo sed -i "s/\port = 5433/port = 5432/" /etc/postgresql/9.3/main/postgresql.conf
+            sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.3/main/pg_hba.conf
+            sudo service postgresql restart
+            sudo -u postgres createuser ubuntu -d --superuser
+            createdb circle_test
+            createdb ubuntu  
+            createdb apiDashboard  
+            sudo apt install python-pytest
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
