--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
           command: |
             sudo apt update && sudo apt install postgresql-client
             sudo service postgresql stop && sudo apt-get remove -y postgresql-9.4 && sudo apt-get update; sudo apt-get install -y postgresql postgresql-contrib
-            sudo sed -i "s/\port = 5433/port = 5432/" /etc/postgresql/9.3/main/postgresql.conf
-            sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.3/main/pg_hba.conf
+            sudo sed -i "s/\port = 5433/port = 5432/" /etc/postgresql/10/main/postgresql.conf
+           
             sudo service postgresql restart
             sudo -u postgres createuser ubuntu -d --superuser
             createdb circle_test
