--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,9 @@ jobs:
           command: |
             sudo apt update && sudo apt install postgresql-client
             sudo service postgresql stop && sudo apt-get remove -y postgresql-9.4 && sudo apt-get update; sudo apt-get install -y postgresql postgresql-contrib
-            
-           
             sudo service postgresql restart
             sudo -u postgres createuser ubuntu -d --superuser
-            createdb circle_test
-            createdb ubuntu  
-            createdb apiDashboard  
+            sudo -u postgres createdb -O ubuntu apiDashboard
             sudo apt install python-pytest
       - run:
           name: Run tests
