--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             echo "circleci ALL=(ALL) NOPASSWD:ALL" | sudo tee -a /etc/sudoers.d/99-circleci
             sudo apt update && sudo apt install postgresql-client
             sudo service postgresql stop && sudo apt-get remove -y postgresql-9.4 && sudo apt-get update; sudo apt-get install -y postgresql postgresql-contrib
+            sudo service postgresql star
             sudo -u postgres createuser ubuntu -d --superuser
             sudo -u postgres createdb -O ubuntu apiDashboard
             sudo apt install python-pytest
