--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
             sudo apt update && sudo apt install postgresql-client
             sudo service postgresql stop && sudo apt-get remove -y postgresql-9.4 && sudo apt-get update; sudo apt-get install -y postgresql postgresql-contrib
             sudo service postgresql restart
-            sudo -u postgres createuser ubuntu -d --superuser
-            sudo -u postgres createdb -O ubuntu apiDashboard
+            sudo -u postgres createuser postgres -d --superuser
+            sudo -u postgres createdb -O postgres apiDashboard
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
