--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ FLASK_RUN_PORT=50000
 FLASK_RUN_HOST=localhost
 
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/apiDashboard"
+SQLALCHEMY_DATABASE_URI="postgresql://ubuntu:1@localhost:5432/apiDashboard"
