--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+astroid==2.15.2
 attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+dill==0.3.6
 exceptiongroup==1.1.1
 Flask==2.2.3
 Flask-Login==0.6.2
@@ -11,12 +13,17 @@ greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.0.0
 iniconfig==2.0.0
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lazy-object-proxy==1.9.0
 MarkupSafe==2.1.2
+mccabe==0.7.0
 packaging==23.0
+platformdirs==3.2.0
 pluggy==1.0.0
 psycopg2==2.9.5
+pylint==2.17.2
 pytest==7.2.2
 python-dotenv==1.0.0
 PyYAML==6.0
@@ -24,8 +31,10 @@ requests==2.28.2
 responses==0.23.1
 SQLAlchemy==2.0.6
 tomli==2.0.1
+tomlkit==0.11.7
 types-PyYAML==6.0.12.8
 typing_extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.2.3
+wrapt==1.15.0
 zipp==3.15.0
