--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ FLASK_ENV=development
 FLASK_DEBUG=1
 FLASK_APP=app/app.py
 FLASK_RUN_PORT=50000
-FLASK_RUN_HOST=localhost
+FLASK_RUN_HOST=0.0.0.0
 
 SECRET_KEY=your_secret_key
 SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/apiDashboard"
