--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.15.2
 attrs==22.2.0
+cachelib==0.9.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
@@ -7,6 +8,7 @@ colorama==0.4.6
 dill==0.3.6
 exceptiongroup==1.1.1
 Flask==2.2.3
+Flask-Caching==2.0.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
