--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,46 @@
-absl-py==1.4.0
-astunparse==1.6.3
-async-generator==1.10
+astroid==2.15.2
 attrs==22.2.0
-cachetools==5.3.0
+bcrypt==4.0.1
+cachelib==0.9.0
 certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
+charset-normalizer==3.1.0
+click==8.1.3
 colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
-Cython==0.29.33
-distlib==0.3.6
-exceptiongroup==1.1.0
-filelock==3.9.0
-flatbuffers==1.12
-fonttools==4.38.0
-gast==0.4.0
-gin==0.1.6
-gin-config==0.5.0
-google-auth==2.16.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.51.1
-h11==0.14.0
-h5py==3.8.0
+dill==0.3.6
+exceptiongroup==1.1.1
+Flask==2.2.3
+Flask-Bcrypt==1.0.1
+Flask-Caching==2.0.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+greenlet==2.0.2
 idna==3.4
-imageio==2.25.0
 importlib-metadata==6.0.0
 iniconfig==2.0.0
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==15.0.6.1
-lvis==0.5.3
-lxml==4.9.2
-Markdown==3.4.1
+isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.9.0
 MarkupSafe==2.1.2
-matplotlib==3.6.3
-networkx==3.0
-numpy==1.23.1
-oauthlib==3.2.2
-opencv-python==4.7.0.68
-opt-einsum==3.3.0
-outcome==1.2.0
+mccabe==0.7.0
 packaging==23.0
-pandas==1.5.3
-Pillow==9.4.0
-platformdirs==3.1.1
+platformdirs==3.2.0
 pluggy==1.0.0
-protobuf==3.19.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycocotools==2.0.6
-pycparser==2.21
-pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.1
-PySocks==1.7.1
+psycopg2==2.9.5
+pylint==2.17.2
 pytest==7.2.2
-python-dateutil==2.8.2
-python-version==0.0.2
-pytz==2022.7.1
-PyWavelets==1.4.1
+python-dotenv==1.0.0
 PyYAML==6.0
 requests==2.28.2
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-image==0.19.3
-scipy==1.10.0
-selenium==4.8.2
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.0
-tensorflow-addons==0.19.0
-tensorflow-estimator==2.9.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.30.0
-termcolor==2.2.0
-tf-slim==1.1.0
-tifffile==2023.2.3
+responses==0.23.1
+SQLAlchemy==2.0.6
 tomli==2.0.1
-trio==0.22.0
-trio-websocket==0.9.2
-typeguard==2.13.3
-typing-extensions==4.4.0
-urllib3==1.26.14
-virtualenv==20.21.0
-Werkzeug==2.2.2
-wrapt==1.14.1
-wsproto==1.2.0
-zipp==3.13.0
+tomlkit==0.11.7
+types-PyYAML==6.0.12.8
+typing_extensions==4.5.0
+urllib3==1.26.15
+Werkzeug==2.2.3
+wrapt==1.15.0
+WTForms==3.0.1
+zipp==3.15.0
