--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ FLASK_APP=app/app.py
 FLASK_RUN_PORT=50000
 FLASK_RUN_HOST=0.0.0.0
 
+MAIL_USERNAME=your_email_usename
+MAIL_PASSWORD=your_email_password
+
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/apiDashboard"
+SQLALCHEMY_DATABASE_URI="postgresql://postgres:1abCD!@localhost:5432/apiDashboard"
