--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ MAIL_USERNAME=your_email_usename
 MAIL_PASSWORD=your_email_password
 
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:1abCD!@localhost:5432/apiDashboard"
+SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/ApiDashboardDB"
