--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ FLASK_APP=app/app.py
 FLASK_RUN_PORT=50000
 FLASK_RUN_HOST=0.0.0.0
 
-MAIL_USERNAME=your_email_usename
-MAIL_PASSWORD=your_email_password
+MAIL_USERNAME=zzro333@gmail.com
+MAIL_PASSWORD=wiibdoxuisaydfnb
 
 SECRET_KEY=your_secret_key
 SQLALCHEMY_DATABASE_URI="postgresql://postgres:1@localhost:5432/ApiDashboardDB"
