--- a/.env
+++ b/.env
@@ -3,8 +3,5 @@ FLASK_DEBUG=1
 FLASK_APP=app/app.py
 FLASK_RUN_PORT=50000
 FLASK_RUN_HOST=0.0.0.0
-
-
-
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI="postgresql://postgres:1abCD!@localhost:5432/apiDashboard"
+SQLALCHEMY_DATABASE_URI=postgresql://postgres:1@localhost:5432/ApiDashboardDB
