--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: API Dashboard CI
+name: Docker Build API Dashboard
 
 on:
   push:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       #  Checkout mã nguồn từ nhánh "production" của repository.
-      - name: Checkout github
+      - name: Checkout repository
         uses: actions/checkout@v2
         
      # Đăng nhập vào Docker Hub bằng tên người dùng và mật khẩu được lưu trữ trong secrets.
@@ -25,28 +25,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
         id: buildx
 
-      # Caching các lớp hình ảnh Docker để tăng tốc độ xây dựng trong các lần chạy tiếp theo.
-      - name: Cache Docker Image Layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
       # Xây dựng và đẩy hình ảnh Docker cho thành phần client của ứng dụng API Dashboard.
-      - name: Build and Push Docker image for client
+      - name: Build and Push Docker image
         uses: docker/build-push-action@v2
-        id: docker_build_client
         with:
           context: .
           file: ./Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/api-dashboard:v1.0.0
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-
-      # Xác minh hình ảnh Docker đã được xây dựng và đẩy thành công bằng cách in ra giá trị băm (digest) của hình ảnh.
-      - name: Verify
-        run: echo ${{ steps.docker_build_client.outputs.digest }}
