--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -54,12 +54,11 @@ jobs:
             if [ -d "Nhom1_CCPTPM" ]; then
               cd Nhom1_CCPTPM
               git pull https://github.com/tuanhcmute/Nhom1_CCPTPM.git && \echo "Pull completed"
-              cd ../
+              cd ..
             else
               git clone https://github.com/tuanhcmute/Nhom1_CCPTPM.git && \echo "Clone completed"
             fi
-            cd Nhom1_CCPTPM/
             sudo apt-get update && sudo apt-get upgrade -y
-
-
+            cd Nhom1_CCPTPM
+            sudo docker-compose -f ./docker-compose.yml down -v
     
