--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -52,7 +52,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             if [ -d "Nhom1_CCPTPM" ]; then
-              git config --global --add safe.directory /home/Nhom1_CCPTPM
               cd Nhom1_CCPTPM
               git pull https://github.com/tuanhcmute/Nhom1_CCPTPM.git && \echo "Pull completed"
               cd ..
@@ -64,5 +63,6 @@ jobs:
             sudo docker-compose -f ./docker-compose.yml down -v
             sudo docker rm doduongthaituan/api-dashboard:v1.0.0 -f || true
             sudo docker rmi doduongthaituan/api-dashboard:v1.0.0 -f || true
+            sudo docker-compose -f ./docker-compose.yml up -d --build
             
     
